refactor: Get rid of some deprecated APIs
+ Use `setComparator` instead of `setSorter`
+ Don't use deprecated URL constructor when opening a Browser
+ Refactor `DSPImages` to be more similar to `LSPImages`, to get rid of URL usage